@@ -522,30 +522,29 @@ class WFDieselFacet extends WFWidget implements WFDieselSearchHelperStateTrackin
     private function facetMenuHTML($facets)
     {
         $baseLink = $this->parent()->baseURL() . '/' . urlencode($this->dieselSearchHelper->getQueryState($this->attributeID));
-        $html = '
-            <script language="JavaScript">
-            <!--
-            function __phocoaWFDieselSearchMenuSelected_' . $this->attributeID . '(select)
+        $html = <<<END
+            <script>
+            PHOCOA.namespace("widgets.{$this->id}.attributes.{$this->attributeID}");
+            PHOCOA.widgets.{$this->id}.attributes.{$this->attributeID}.menuSelected = function(select)
             {
                 var index;
-                var initialSelection = \'' . $this->value . '\';
+                var initialSelection = '{$this->value}';
 
                 for(index=0; index<select.options.length; index++)
                     if(select.options[index].selected)
                     {
                         if(select.options[index].value != initialSelection)
                         {
-                            newURL = "' . $baseLink . '|EQ_' . $this->attributeID . '=" + select.options[index].value; 
+                            newURL = '{$baseLink}|EQ_{$this->attributeID}=' + select.options[index].value; 
                             facetHandleClick();
                             window.location.href = newURL;
                         }
                         break;
                     }
             }
-            -->
             </script>
-            ';
-        $html .= "<select id=\"{$this->id}\" name=\"{$this->id}\" onChange=\"__phocoaWFDieselSearchMenuSelected_{$this->attributeID}(this);\" >\n";
+END;
+        $html .= "<select id=\"{$this->id}\" name=\"{$this->id}\" onChange=\"PHOCOA.widgets.{$this->id}.attributes.{$this->attributeID}.menuSelected(this);\" >\n";
         // add "show all" choice
         $html .= "<option value=\"\">{$this->showAllText}</option>\n";
 
